--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		<meta
 			data-react-helmet="true"
 			property="og:url"
-			content="https://nitesh-goshwami.netlify.app/" 
+			content="#Home" 
 		/> <!-- It should be deployed link -->
 		<meta name="author" content="Pushpendra Kumar Pandey" />
 		<meta
@@ -73,12 +73,12 @@
 		<link
 			rel="apple-touch-icon-precomposed"
 			type="image/x-icon"
-			href="https://avatars.githubusercontent.com/u/86410121?v=4"
+			href="https://avatars.githubusercontent.com/u/86410106?v=4"
 			sizes="72x72"
 		/> <!-- profile pic-->
 		<link
 			rel="preload"
-			href="https://avatars.githubusercontent.com/u/86410121?v=4"
+			href="https://avatars.githubusercontent.com/u/86410106?v=4"
 			as="image"
 		/>
 		<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
