--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		<meta
 			data-react-helmet="true"
 			property="og:url"
-			content="#Home" 
+			content="https://pushpendra-portfolio-pandeypushpendra3.vercel.app/" 
 		/> <!-- It should be deployed link -->
 		<meta name="author" content="Pushpendra Kumar Pandey" />
 		<meta
